--- a/Affilitate/css/style.css
+++ b/Affilitate/css/style.css
@@ -32,6 +32,7 @@ ul{
     width: 100%;
     display: inline-block;
     box-shadow: 0px 1px 8px rgba(83, 109, 122, 0.29);
+    background-color: #f00;
 }
 
 .logo-col{
